v3/platform/kubernetes/README.md
# Kubernetes IaC

Ce répertoire est le point d'entrée déclaratif de la plateforme Kubernetes.

- `base/observability/` contient les ressources Elastic, Fleet et les
  collecteurs Kubernetes pour les logs et métriques Prometheus.
- `overlays/local/` décrit l'environnement POC local. Les futurs environnements
  (`recette`, `production`) seront des overlays distincts, sans duplication des
  ressources de base.

Installer ou mettre à jour ECK 3.5.0, puis déployer l'environnement local :

```bash
make eck-deploy
make elk-deploy
```

Traefik reste un prérequis de bootstrap du cluster. La cible
`elastic-stack-deploy`, appelée par `make elk-deploy`, installe ou met à jour la
release Helm `elastic-stack` avec Elasticsearch et Kibana `9.4.3`. Ses
valeurs d'installation sont versionnées dans
`platform/helm/eck-stack-values.yaml`; Elasticsearch est volontairement exclu
du bundle Kustomize pour éviter deux contrôleurs de cycle de vie sur la même
ressource. Les secrets ne sont pas stockés ici : ils doivent
être fournis par un gestionnaire de secrets (SOPS ou External Secrets) avant un
déploiement GitOps autonome.

Le manifeste `eck-trial-license.yaml` est volontairement exclu des overlays :
il démarre un essai Enterprise de 30 jours et matérialise l'acceptation de
l'EULA Elastic. Son application doit rester une action explicite :

```bash
make eck-trial-start
make eck-license-status
```

La première cible applique le Secret dans le namespace `elastic-system`. La
seconde doit afficher une licence `active` de type `enterprise` ou `trial`
après la réconciliation de l'opérateur ECK.

Kibana utilise le registre public Elastic (`https://epr.elastic.co`) pour les
packages Fleet. Le cluster doit donc autoriser les connexions HTTPS sortantes
vers ce registre avant d’exécuter `make elk-deploy`.

Le Gateway OTLP est exécuté sur la VM `data-01`, derrière HAProxy publié aux
conteneurs k3d via `192.168.5.2:4317` et `192.168.5.2:4318`. Les applications
Kubernetes l'utilisent comme endpoint OTLP. Le Deployment `otel-prometheus-scraper`
conserve le scrape des métriques Actuator dans le cluster. Les logs et les
métriques Kubernetes suivent le chemin EDOT vers Kafka, puis l'exporteur EDOT
sur `data-01` les écrit dans Elasticsearch. Les VM utilisent l'Elastic Agent
enrôlé dans Fleet et publient directement vers Elasticsearch.

Les URL fonctionnelles v3 utilisent les mêmes noms que v1 et v2 :
`elasticsearch.observability.test`, `kibana.observability.test` et `fleet.observability.test`. Fleet Server
n'est pas une interface web : la racine `/` peut répondre `404`. Pour vérifier
son état, utiliser `https://fleet.observability.test/api/status` ; une réponse `200`
confirme que le routage et le service sont opérationnels.

Pour un Elasticsearch déjà existant, la configuration de stockage ne doit pas
être ajoutée rétrospectivement : ECK interdit ce changement. Prévoir une
migration dédiée par snapshot/restauration vers un nouveau cluster avec ses
`volumeClaimTemplates` déclarés dès la création.
